@@ -1,3 +1,8 @@
+2003-08-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* tutorials.xml: New entity bootoptions.
+	* user/intro/bootoptions.xml: New file.
+
 2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* tutorials.xml: New entity taggingfunctions.
